# pipepp2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: pipepp2.hpp
tests/automated/: doctest.hxx
